<resources>
    <string name="app_name">FBAuthProject</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">password</string>
    <string name="hint_phone">mobile</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="btn_sign_out">SignOut</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_link_to_login">Already a Member ?, login</string>
    <string name="btn_link_to_signup">Not a Member?, SignUp</string>
    <string name="err_msg_email">Email </string>
    <string name="err_msg_required">should not be empty</string>
    <string name="err_msg_password">Password</string>
    <string name="logged_in_str">Authorized</string>

    <!-- Titles-->
    <string name="title_signup">SignUp</string>
    <string name="title_login">Login</string>
    <string name="title_logged">Hi</string>
    <string name="scannerview">ScannerView</string>
    <string name="available_str">Available</string>
    <string name="history_str">History</string>
    <string name="engage">engage</string>
    <string name="undefined">undefined</string>
    <string name="not_registered">Not registered</string>
    <string name="request_device">Request Device</string>
    <string name="return_device">Return Device</string>


    <string name="no_history">No History available right now</string>

</resources>
